--- a/user-onboarding/src/App.scss
+++ b/user-onboarding/src/App.scss
@@ -30,8 +30,8 @@ html {
     border: 1px solid black;
     border-radius: 5px;
     font-size: 1.8rem;
-    &:not(:last-child) {
-      margin-bottom: 30px;
+    &:not(:first-child) {
+      margin-top: 30px;
     }
     &:focus {
       border-color: tomato;
@@ -42,7 +42,7 @@ html {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    margin-bottom: 30px;
+    margin: 30px 0;
     &--label {
       order: 2;
       font-size: 1.8rem;
@@ -71,5 +71,9 @@ html {
     border-radius: 5px;
     font-size: 1.8rem;
     font-weight: bold;
+  }
+  &__error {
+    color: darkslategray;
+    font-size: 1.3rem;
   }
 }
